ligolang/src/test/contracts/negative/vars_consts/capture_var_param.ligo
function foo(var x : int) : int is
  block {
    function bar(const _ : unit) : int is x;
  } with bar
